--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ rasterio==1.4.3
 shapely==2.1.1
 
 # PyTorch (CUDA 12.4 version)
-torch @ https://download.pytorch.org/whl/cu124/torch-2.6.0%2Bcu124-cp311-cp311-linux_x86_64.whl
+torch @ https://download.pytorch.org/whl/cu125/torch-2.6.0%2Bcu125-cp311-cp311-linux_x86_64.whl
 
 # Segment Anything Model
-segment_anything @ git+https://github.com/facebookresearch/segment-anything.git@dca509fe793f601edb92606367a655c15ac00fdf
+segment-anything-py
