--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,10 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "orthomasker"
-version = "0.9.0"
+version = "0.9.1"
 description = "A CLI tool and Python library for extracting vector features from geospatial raster (TIF) files using the Segment Anything Model (SAM), and exporting them as GeoJSON."
-readme = "README.md"
-license = {file = "LICENSE"}
+readme = {file = "README.md", content-type = "text/markdown"}
+license = {text = "Apache-2.0"}
 authors = [
     {name = "Nicholas McCarty", email = "nick@upskilled.consulting"}
 ]
@@ -15,7 +15,7 @@ keywords = ["gis", "geojson", "tif", "mask", "cli"]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
-    "License :: OSI Approved :: MIT License",
+    "License :: OSI Approved :: Apache Software License",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
